add makefile to Labs 1..4

--- a/Lab2/Task1/Makefile
+++ b/Lab2/Task1/Makefile
@@ -6,8 +6,10 @@ build:
     cd $(CURDIR)
     gcc -std=c89 -c $(PATH_LIB)/deRigorich/deRigorich.c -o deRigorich.o
     ar rcs libdeRigorich.a deRigorich.o
+    gcc -std=c89 -I $(PATH_LIB)/deRigorich -c TariffsBase.c -o TariffsBase.o
+    ar rcs libTariffsBase.a TariffsBase.o
     gcc -std=c89 -I $(PATH_LIB)/deRigorich -c "$(NAME_PART).c" -o "$(NAME_PART).o"
-    gcc -std=c89 "$(NAME_PART).o" -L . -l deRigorich -o "$(NAME_PART).exe"
+    gcc -std=c89 "$(NAME_PART).o" -L . -l deRigorich -L . -l TariffsBase -o "$(NAME_PART).exe"
 
 run:
     ./$(NAME_PART)
