--- a/Lab2/Task1/Makefile
+++ b/Lab2/Task1/Makefile
@@ -1,6 +1,6 @@
-all: build run
+all: build run clean
 NAME_PART = Solve
-PATH_LIB = Rigorich/C89Labs
+PATH_LIB = C:/BSUIR/C/C89Labs
 
 build:
 	cd $(CURDIR)
@@ -13,3 +13,6 @@ build:
 
 run:
 	./$(NAME_PART)
+
+clean:
+	git clean -x -f
